welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: Int(1) does not take parameters
	{
        ^